# rpn-stack-lib

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  hello
src/: CMakeLists.txt  cmake_install.cmake  hello.c  main.c  rpn-stack-lib.c  rpn-stack-lib.h.in
tests/: CMakeLists.txt  check  check.c  cmake_install.cmake  make_stack.c  sanity.c
